# nxopen_rs

./: Cargo.toml  README.md  build.rs
libs/: libgeomint.lib  libjam.lib  libnxblockstyler.lib  libsyss.lib
src/: lib.rs
src/nxopen/: mod.rs  taggedobject.rs
src/nxopen/nxopen_ui/: block_dialog.rs  compositeblock.rs  mod.rs  ui.rs  uiblock.rs
src/nxopen/utilities/: jam.rs  mod.rs
src/nxopen_internal/: mod.rs  syss.rs
src/ui/: list_ui.rs  messagebox.rs  mod.rs
src/ui/blockstyler/: blockdialog.rs  button.rs  compositeblock.rs  mod.rs  selectobject.rs  uiblock.rs  uiblocktrait.rs
src/utilities/: itaggedobject.rs  jam.rs  mod.rs  om.rs  taggedobject.rs
src/utils/: cstr.rs  list.rs  load_function.rs  mod.rs  vector.rs  winapi.rs
tests/test1/: Cargo.toml
tests/test1/.cargo/: config.toml
tests/test1/src/: lib.rs
